Done for today.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <body>
     <h1>Broadway Design
       <br /><br /><br /></h1>
+      <h5>Home</h5>
+      <h5>Process</h5>
+      <h5>Work</h5>
+      <h5>Team</h5>
+      <h5>Contact</h5>
     <h2>Our Process</h2>
       <img src="/Users/johnhongmacintosh/Documents/CODECADEMY/projects/Broadway/identify.svg" />
     <h3>Identify</h3>
@@ -22,10 +27,10 @@
     <h3>Portfolio</h3>
       <p>Coming soon</p>
     <h3>Team</h3>
+      <p>We're hiring!!!!!!!!</p>
+    <h3>Contact</h3>
       <p>Phone: (555)-555-5555</p>
       <p>Email: text@example.com</p>
       <p>Twitter: @test</p>
-    <h3>Contact</h3>
-
   </body>
 </html>
